kube/ntcore/log-events-processor.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: log-events-processor
  labels:
    app: log-events-processor

spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-events-processor
  template:
    metadata:
      labels:
        app: log-events-processor
    spec:
      volumes:
        - name: log-events-processor
          configMap:
            name: log-events-processor
      containers:
        - name: log-events-processor
          imagePullPolicy: Always
          image: ntcore/log-events-processor:latest
          volumeMounts:
            - name: log-events-processor
              mountPath: /amazon-kinesis-client-python/ntcore/config
