kube/ntcore/ntcore.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ntcore

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8180
      targetPort: 8180
  selector:
    app: ntcore

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: ntcore
  labels:
    app: ntcore

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntcore
  template:
    metadata:
      labels:
        app: ntcore
    spec:
      volumes:
        - name: ntcore
          configMap:
            name: ntcore
      containers:
        - name: ntcore
          image: ntcore/webserver:latest
          ports:
            - name: web
              containerPort: 8180
          volumeMounts:
            - name: ntcore
              mountPath: /usr/src/app/app-config

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ntcore-ingress-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dsp/console`)
      kind: Rule
      services:
      - name: ntcore
        port: 8180
    - match: PathPrefix(`/dsp/public`)
      kind: Rule
      services:
      - name: ntcore
        port: 8180
    - match: PathPrefix(`/dsp/api`)
      kind: Rule
      services:
      - name: ntcore
        port: 8180
