kube/ntcore/talos.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ntcore-talos
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 8180
      targetPort: 8180
  selector:
    app: ntcore-talos

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ntcore-talos
  labels:
    app: ntcore-talos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntcore-talos
  template:
    metadata:
      labels:
        app: ntcore-talos
    spec:
      volumes:
        - name: ntcore-talos
          configMap:
            name: ntcore-talos
      containers:
        - name: ntcore-talos
          image: ntcore/talos:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8180
          volumeMounts:
            - name: ntcore-talos
              mountPath: /usr/src/app/app-config

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ntcore-talos
spec:
  rules:
  - http:
      paths:
      - path: /dsp/users
        pathType: Prefix
        backend:
          service:
            name: ntcore-talos
            port:
              number: 8180
      - path: /dsp/api/v[0-9]+/users
        pathType: Prefix
        backend:
          service:
            name: ntcore-talos
            port:
              number: 8180
